LHC-1948 add ProductPurchaseView api
